--- a/PackageDevelop.Rmd
+++ b/PackageDevelop.Rmd
@@ -43,9 +43,9 @@ class: inverse
 - [Que es un paquete](#intro)  
 - [Licencia](#licencia)  
 - [Como agregar datos](#datos)
-- [Agregar datos al paquete](#datos_ex) 
+- [Ejercicio datos](#datos_ex) 
 - [Como crear función](#funciones)
-- [Crear función](#funciones_ex)
+- [Ejercicio funciones](#funciones_ex)
 - [Como crear hexsticker](#sticker)
 
 ```{r paquetes, echo=FALSE}
@@ -53,7 +53,7 @@ library(emo)
 library(fontawesome)
 ColorEnlace<-'#7209B7'
 ColorEnlaceInverso<-"#4cc9f0"
-xaringanExtra::use_clipboard()
+#xaringanExtra::use_clipboard()
 ```
 
 ```{r xaringan-panelset, echo=FALSE}
@@ -101,22 +101,22 @@ background-size: cover
 
 **Problemas**
 - Repito pasos y análisis con datos similares...  
-.right[ _hasta ahora reciclo funciones de scripts anteriores_ ]
+.right[ _hasta ahora re-uso funciones de scripts anteriores_ ]
 
 - Estudiantes y colegas me preguntan como realizar análisis similares...  
-.right[ _muchos no estan familizarizados con la sintaxis de las funciones_]
+.right[ _muchos no estan familiarizados con la sintaxis de las funciones_]
 
 - Los artículos me piden más detalles de como se realizaron los análisis...   
 .right[ _el espacio es limitado para dar detalles_ ]
 
 - Aunque existan paquetes similares no cubren todos los pasos...   
-.right[  _sirven de inspiracion pero no resuelven mi problema_ ]
+.right[  _sirven de inspiración pero no resuelven el problema_ ]
 
 **Motivantes**
 
 - Quiero que otras personas puedan replicar mis análisis y que las funciones estén accesibles.
 
-- Quiero hacer las funciones y documentación este en ingles y español.  
+- Quiero hacer las funciones y documentación este en inglés y español.  
 
 ---
 
@@ -137,7 +137,7 @@ library(usethis)
 
 Antes de iniciar a crear un paquete, se puede consultar el nombre en la página [CRAN](https://cran.r-project.org/)
 
-También existe el paquete **available** para revisar si el paquete ya existe en CRAN o en github y si el nombre de tu paquete puede ser ofensivo.
+También existe el paquete **available** para revisar si el paquete ya existe en CRAN o en github y si el nombre de el paquete puede ser ofensivo.
 ```{r, eval=FALSE}
 install.packages('available')
 library(available)
@@ -154,19 +154,19 @@ Pregunta si quieres que revise por contenido ofensivo, puedes poner **Y**.
 Urban Dictionary can contain potentially offensive results,
   should they be included? [Y]es / [N]o:
 ```
-Después te abre las paginas para mostrarte que significa el nombre de tu paquete.
+Después abre paginas para mostrar que significa el nombre de el paquete.
 
 ---
 
 ## 1.3. Crear
 
 Para crear un paquete la función **create_package** crea el **esqueleto** de los paquetes.  <br>
-Dentro pon el nombre del paquete que te interesa.  
+Dentro puedes poner el nombre del paquete que te interesa crear.  
 ```{r, eval=FALSE}
 usethis::create_package("nombre_paquete")
 ```
 
-Aparecera algo así:
+Aparecerá algo así:
 ```{r, eval=FALSE}
 √ Creating 'nombre_paquete/'
 √ Setting active project to '...'
@@ -199,7 +199,7 @@ RoxygenNote: 7.1.1
 
 <h1>  📄📂️ </h1>
 
-La función anterior creo los archivos:
+La función anterior creó los archivos:
 - .gitignore
 - .Rbuildignore
 - DESCRIPTION
@@ -207,7 +207,7 @@ La función anterior creo los archivos:
 - README.md
 
 
-Los Folders:
+Las Carpetas:
 - R
 
 
@@ -228,7 +228,7 @@ Overwrite pre-existing file 'nombre_paquete.Rproj'?
 3: No way
 ```
 
-Aparecer algo como:
+Aparecerá algo como:
 ```{r, eval=FALSE}
 v Writing 'nombre_paquete.Rproj'
 v Adding '^nombre_paquete\\.Rproj$' to '.Rbuildignore'
@@ -295,7 +295,7 @@ Otra vez en la consola escribir:
 usethis::use_github()
 ```
 
-Aparecer algo como:
+Aparecerá algo como:
 ```{r, eval=FALSE}
 i Defaulting to https Git protocol
 √ Setting active project to 'C:/...'
@@ -336,7 +336,7 @@ devtools::check()
 ```
 
 Al hacer esto, se reviso la versión, plataforma, sesiones y demás.   
-Tarda un poquito.  ⏳
+Tarda un poquito  ⏳
 
 ```{r, eval=FALSE}
 0 errors √ | 1 warning x | 0 notes √
@@ -362,7 +362,7 @@ Para sofware la licencia más común es **MIT**
 usethis::use_mit_license("Mi Nombre")
 ```
 
-Aparecer algo como:
+Aparecerá algo como:
 ```{r, eval=FALSE}
 √ Setting License field in DESCRIPTION to 'MIT + file LICENSE'
 √ Writing 'LICENSE'
@@ -370,7 +370,7 @@ Aparecer algo como:
 √ Adding '^LICENSE\\.md$' to '.Rbuildignore'
 ```
 
-Para revisar si funcionó
+Para revisar si funcionó:
 ```{r, eval=FALSE}
 devtools::check()
 ```
@@ -658,10 +658,10 @@ Para agregar la función al paquete:
 usethis::use_r("tu_funcion")
 ```
 
-**Abre un nuevo Rscript**  
-Pegua allí la función
+**Abre un nuevo script**  
+Pega allí la función
 
-Te aparecera algo como:
+Te aparecerá algo como:
 ```{r, eval=FALSE}
  Modify 'R/tu_funcion.R'
  Call `use_test()` to create a matching test file
@@ -669,8 +669,8 @@ Te aparecera algo como:
 Ahora en la carpeta **R** dentro del paquete aparece la función.  
   
   
-**Nota** sugiere que uses use_test pero puede en conflicto con el siguiente paso.
-Puedes usar rm() para quitar tu función.
+**Nota** sugiere que uses use_test pero puede en conflicto con el siguiente paso.  
+Puedes usar /rm() para quitar tu función.
 
 ---
 
@@ -740,9 +740,9 @@ Para revisar si necesitas dependencias se puede usar:
 ```{r, eval=FALSE}
 devtools::check()
 ```
-Si tu paquete tiene dependencias, apareceran errores, warnings y notas.  
+Si tu paquete tiene dependencias, aparecerán errores, warnings y notas.  
 
-Por ejemplo un paquete tiene que tiene: 
+Por ejemplo, un paquete que usa: 
 - un **%>% (pipe)** depende del paquete **magrittr**, y 
 - la función **separate** depende del paquete **dplyr**.
 
@@ -755,13 +755,13 @@ Para agregar las dependencias se puede escribir el nombre de los paquetes dentro
 usethis::use_package("dplyr")
 ```
 
-Aparecera algo como:
+Aparecerá algo como:
 ```{r, eval=FALSE}
 √ Adding 'dplyr' to Imports field in DESCRIPTION
  Refer to functions with `dplyr::fun()`
 ```
 
-Asi mismo aparecera en DESCRIPTION:
+Así mismo aparecerá en el documento DESCRIPTION:
 ```{r, eval=FALSE}
 Imports: 
     dplyr
@@ -795,8 +795,8 @@ Se recomienda volver a documentar.
 devtools::document()
 ```
 
-Ahora debera aparecer en R un script llamado **utils-pipe.R** y  
-en la DESCRIPTION debera aparecer **Imports magrittr**
+Ahora deberá aparecer en la carpeta R un script llamado **utils-pipe.R** y  
+en el archivo DESCRIPTION deberá aparecer **Imports magrittr**
 
 ---
 
@@ -824,7 +824,7 @@ name: segunda
 
 ## 3.2. Función sin dependencias
 
-Una vez creada una funcion con dependencias declaradas. Una nueva funcion que use los mismos paquetes puede ser creada reduciendo pasos.  
+Una vez creada una función con dependencias declaradas. Una nueva función que use los mismos paquetes puede ser creada reduciendo pasos.  
 
 ```{r, eval=FALSE}
 mi_segunda_funcion(data = mis_datos,
@@ -840,7 +840,7 @@ usethis::use_r("mi_segunda_funcion")
 **Abre un nuevo script**  
 Pega allí la función
 
-Aparecera algo como: 
+Aparecerá algo como: 
 ```{r, eval=FALSE}
 √ Setting active project to 'C:/...'
  Modify 'R/mi_segunda_funcion.R'
@@ -855,7 +855,7 @@ Agregar un Roxigen skeleton:
 - Poner el cursor justo en la primera linea de la función. 
 - Abrir la pestaña de Code>Insert Reoxygen Skeleton (también funciona con Control+Alt+Shift+R).  
 
-Aparecera algo como:
+Aparecerá algo como:
 ```{r, eval=FALSE}
 #' Title
 #'
@@ -880,13 +880,13 @@ Escribir en la consola
 devtools::document()
 ```
 
-Aparecera algo como:
+Aparecerá algo como:
 ```{r, eval=FALSE}
 Writing NAMESPACE
 Writing mi_segunda_funcion.Rd
 ```
 
-Al abrir la carpeta **man** aparecera un documento rellenado.  
+Al abrir la carpeta **man** aparecerá un documento rellenado.  
 El nombre **man** viene de manual y esta es la documentación del paquete.  
 No debe ser editado de manera manual.
 
@@ -931,9 +931,9 @@ devtools::check()
 
 ## 3.4.  Funcion con ggplot
 
-Cuando creamos una función con ggplot hay que declarar el uso de la función en varios argumentos de la función.  [Leer mas](https://ggplot2.tidyverse.org/articles/ggplot2-in-packages.html).
+Cuando creamos una función con ggplot hay que declarar el uso de la función en varios argumentos de la función.  [Aquí puedes leer más](https://ggplot2.tidyverse.org/articles/ggplot2-in-packages.html).
 
-Si no, aparecera un error:
+Si no, aparecerá un error:
 ```{r, eval=FALSE}
 1 error x | 0 warnings √ | 1 note x
 ```
@@ -962,12 +962,12 @@ ggplot2::ggplot(data=data,ggplot2::aes(x=.data[[var1]],
 checking R code for possible problems ...
 ```
 
-Tambien pueden aparecer problemas con las variables al usar ggplot dentro de una funcion.
+También pueden aparecer problemas con las variables al usar ggplot dentro de una función.
 ```{r, eval=FALSE}
 no visible binding for global variable '.mis_datos'
 ```
 
-Para resolver esto hay que declarar las variables dentro de la funcion y posteriormente usar .data
+Para resolver esto hay que declarar las variables dentro de la función y posteriormente usar .data
 ```{r, eval=FALSE}
 data<-TDR_trip
 var1<-time_column
@@ -1017,13 +1017,12 @@ devtools::check()
 ### 3.5.2. Ejemplo muy largo
 
 **Problema**
-El ejemplo tiene mas de 100 characteres, es considerado muy largo.  
+El ejemplo tiene más de 100 caracteres, es considerado muy largo.  
 ```{r, eval=FALSE}
 \examples lines wider than 100 characters:
 ```
 
-**Solución**   
-Separar en la documentación
+**Solución** Separar en la documentación
 ```{r, eval=FALSE}
 #' t_format<-"%d-%m-%Y %H:%M:%S"
 #' t_start<-"30-11-2018 20:43:24"
@@ -1043,8 +1042,7 @@ Separar en la documentación
 **Problema**
 R solo permite un solo return dentro de las funciones. 
 
-**Solución**   
-Crea una lista con los returns
+**Solución** Crea una lista con los returns
 ```{r, eval=FALSE}
 funcion(primer_argumento, segundo_argumento){
   multiplicacion<-primer_argumento*segundo_argumento
@@ -1056,11 +1054,25 @@ funcion(primer_argumento, segundo_argumento){
 
 ---
 
+### 3.5.4. Otros problemas
+**Problema** No nested functions, no circular dependencies.   
+**Solución** No puedes usar funciones de tu paquete en otras funciones del mismo paquete.  
+
+**Problema** Borrar funciones.  
+**Solución** Para borrar funciones se debe borrar el script en el archivo R y volver a documentar el paquete para que se reflejen los cambios.  
+
+**Problema** Al usar slot en sapply.  
+**Solución** Hay que agregar la dependencia methods.  
+
+
+
+---
+
 name: funciones_ex
 class: inverse
 ## 3.6. Ejercicios
 
-Crea tu propia funcion
+Crea tu propia función
 
 .panelset[
 .panel[.panel-name[Crear]
@@ -1126,10 +1138,10 @@ knitr::include_graphics('https://upload.wikimedia.org/wikipedia/commons/0/0f/Zen
 ```
 
 [Zenodo](https://zenodo.org/) es un repositorio de acceso abierto operado por CERN (Organización Europea para la Investigación Nuclear).
-Permite que se depositen allí artículos de investigación, datos, software, informes y otro tipo de objeto digital relacionado con la investigación. La ventaja frente a github es que asigna un **DOI**.
 
-Las versiones de paquetes se pueden registrar en zenodo.
-No obstante, **no tan practico**  ya que cada versión tiene su propio doi y la versión anterior no puede ser eliminada.
+**Ventajas** Permite que se depositen allí artículos de investigación, datos, software, informes y otro tipo de objeto digital relacionado con la investigación. La ventaja frente a github es que asigna un DOI.
+
+**Desventajas** Las versiones de paquetes se pueden registrar en zenodo. No obstante, NO es tan practico  ya que cada versión tiene su propio DOI y la versión anterior no puede ser eliminada.
 
 ---
 
@@ -1140,10 +1152,10 @@ class: inverse
 
 - [Que es un paquete](#intro)  
 - [Licencia](#licencia)  
-- [Como agregar datos](#datos)
+- [Ejercicio datos](#datos)
 - [Agregar datos al paquete](#datos_ex) 
 - [Como crear función](#funciones)
-- [Crear función](#funciones_ex)
+- [Ejercicio función](#funciones_ex)
 - [Como crear hexsticker](#sticker)
 
 .right[
